Fix overlap of side widgets on sticky record header

--- a/core/app/shell/src/themes/suite8/css/layout/_recordview.scss
+++ b/core/app/shell/src/themes/suite8/css/layout/_recordview.scss
@@ -33,7 +33,7 @@
 .record-view-position-sticky {
   position: sticky;
   top: 3em;
-  z-index: 11;
+  z-index: 500;
   min-height: 47px
 }
 
